force-app/integration-logs-framework/objects/IHD_Plugin__mdt/IHD_Plugin__mdt.object-meta.xml
<CustomObject>
    <description
  >Unified registry for all plugin types (Trigger, Service, Field, Card).</description>
    <label>IHD Plugin</label>
    <pluralLabel>IHD Plugins</pluralLabel>
</CustomObject>