force-app/integration-logs-framework/objects/IHD_Plugin__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >Admin-facing description of what this plugin does.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>