force-app/integration-logs-framework/objects/IHD_Plugin__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description
  >Controls whether this plugin is active. Disabled plugins are excluded from discovery.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>