force-app/integration-logs-framework/objects/IHD_Plugin__mdt/fields/Grid_Span__c.field-meta.xml
<CustomField>
    <fullName>Grid_Span__c</fullName>
    <description
  >Number of columns the plugin card spans in the dashboard grid (1-3). Default is 1.</description>
    <label>Grid Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1 Column</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Columns</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Columns</default>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>