force-app/integration-logs-framework/objects/IHD_Plugin__mdt/fields/LwcComponentName__c.field-meta.xml
<CustomField>
    <fullName>LwcComponentName__c</fullName>
    <description
  >LWC component name in kebab-case for Card plugins (e.g. c-ihd-priority-gauge).</description>
    <label>LWC Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>